# remote-discord-muter

./: .dockerignore  Dockerfile  README.md  render.yaml
client/web/: .dockerignore  .env  .example.env  Dockerfile  next.config.js  package-lock.json  package.json
client/web/app/: layout.tsx  page.tsx
client/web/app/_components/: MuteStatus.tsx  ToggleMuteButton.tsx  Users.tsx
client/web/app/_util/: context.ts  server.ts
client/web/components/: ToggleMuteButton.tsx  Users.tsx
client/web/contexts/: user.ts
client/web/pages/: _app.tsx  index.tsx
client/web/src/components/: PostButton.tsx
client/web/src/pages/: index.astro
client/web/types/: user.ts
muter/: .example.env  main.js  main.ts  package-lock.json  package.json
server/: .gitignore  Cargo.toml  Dockerfile
server/src/: api.rs  main.rs  routes.rs  utils.rs
server/src/api/: mute.rs  setting.rs  watch.rs
server/src/routes/: api.rs  root.rs
server/src/utils/: kind.rs  other.rs  state.rs
